Milestone 2: - The currency converter app in a presentable format - PlainText text-field is taking input correctly - The output is being displayed in a new activity - The conversion from dollars to pounds is correctly done. - The fully functioning currency converter app - Push and commit changes to your repo

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,8 @@
 <resources>
-    <string name="app_name">Lab2</string>
+    <string name="app_name">Currency Converter</string>
     <string name="textview">TextView</string>
+    <string name="click_me">Convert</string>
+    <string name="button_demo">Currency Converter</string>
+    <string name="enter_your_name">Enter Amount in Dollars</string>
+    <string name="currency_exchange">Currency Exange</string>
 </resources>
